--- a/TimecardApp/View/TimelogPage.xaml
+++ b/TimecardApp/View/TimelogPage.xaml
@@ -15,7 +15,7 @@
 
     <!--LayoutRoot ist das Stammraster, in dem alle anderen Seiteninhalte platziert werden-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
-        <phone:Pivot x:Name="SettingPivot" SelectionChanged="SettingPivot_SelectionChanged" HorizontalAlignment="Left" Height="Auto" Title="TimecardApp - timelog" VerticalAlignment="Top" Width="500">
+        <phone:Pivot x:Name="SettingPivot" HorizontalAlignment="Left" Height="Auto" Title="TimecardApp - timelog" VerticalAlignment="Top" Width="500">
             <phone:PivotItem x:Name="TimelogSetting" CacheMode="{x:Null}" Header="setting">
                 <Grid x:Name="SettingPanel" >
                     <Grid.ColumnDefinitions>
@@ -28,12 +28,12 @@
                         <RowDefinition Height="*"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
-                    <TextBlock Grid.Row="0" Grid.Column="0" Text="sitename" Margin="12" FontSize="30" FontFamily="{StaticResource PhoneFontFamilyLight}"/>
-                    <TextBox Grid.Column="1" Grid.Row="0" Width="300" />
+                    <TextBlock Grid.Row="0" Grid.Column="0" Text="url" Margin="12" FontSize="30" FontFamily="{StaticResource PhoneFontFamilyLight}"/>
+                    <TextBox Grid.Column="1" Grid.Row="0" Width="300" Text="{Binding Url }" />
                     <TextBlock Grid.Row="1" Grid.Column="0" Text="username" Margin="12" FontSize="30" FontFamily="{StaticResource PhoneFontFamilyLight}"/>
-                    <TextBox Grid.Column="1" Grid.Row="1" Width="300" />
+                    <TextBox Grid.Column="1" Grid.Row="1" Width="300"  Text="{Binding Username }"/>
                     <TextBlock Grid.Row="2" Grid.Column="0" Text="password" Margin="12" FontSize="30" FontFamily="{StaticResource PhoneFontFamilyLight}"/>
-                    <PasswordBox Grid.Row="2" Grid.Column="1" Width="300"/>
+                    <PasswordBox Grid.Row="2" Grid.Column="1" Width="300" Password="{Binding Password }" />
                     <Button Content="Login"  IsEnabled ="{Binding LoggedNotIn }"  Grid.Column="0" Grid.Row="3" Click="loginButton_Click"/>
                     <Button Content="Import current data" IsEnabled ="{Binding LoggedIn }"  Grid.Column="1" Grid.Row="3" Click="loadDataButton_Click"/>
 
