Tl API, small fix on delte customer

--- a/TimecardApp/View/TimelogPage.xaml
+++ b/TimecardApp/View/TimelogPage.xaml
@@ -16,7 +16,7 @@
     <!--LayoutRoot ist das Stammraster, in dem alle anderen Seiteninhalte platziert werden-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
         <phone:Pivot x:Name="SettingPivot" HorizontalAlignment="Left" Height="Auto" Title="TimecardApp - timelog" VerticalAlignment="Top" Width="500">
-            <phone:PivotItem x:Name="TimelogSetting" CacheMode="{x:Null}" Header="setting">
+            <phone:PivotItem x:Name="TimelogSetting" CacheMode="{x:Null}" Header="Tl setting">
                 <Grid x:Name="SettingPanel" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"/>
@@ -27,16 +27,18 @@
                         <RowDefinition Height="*"/>
                         <RowDefinition Height="*"/>
                         <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
-                    <TextBlock Grid.Row="0" Grid.Column="0" Text="url" Margin="12" FontSize="30" FontFamily="{StaticResource PhoneFontFamilyLight}"/>
-                    <TextBox Grid.Column="1" Grid.Row="0" Width="300" Text="{Binding Url }" />
+                    <TextBlock Grid.Row="0" Grid.Column="0" Text="Timelog url" Margin="12" FontSize="30" FontFamily="{StaticResource PhoneFontFamilyLight}"/>
+                    <TextBox Grid.Column="1" Grid.Row="0" Width="300" Text="{Binding Url ,Mode=TwoWay}" />
                     <TextBlock Grid.Row="1" Grid.Column="0" Text="username" Margin="12" FontSize="30" FontFamily="{StaticResource PhoneFontFamilyLight}"/>
-                    <TextBox Grid.Column="1" Grid.Row="1" Width="300"  Text="{Binding Username }"/>
+                    <TextBox Grid.Column="1" Grid.Row="1" Width="300"  Text="{Binding Username ,Mode=TwoWay }"/>
                     <TextBlock Grid.Row="2" Grid.Column="0" Text="password" Margin="12" FontSize="30" FontFamily="{StaticResource PhoneFontFamilyLight}"/>
-                    <PasswordBox Grid.Row="2" Grid.Column="1" Width="300" Password="{Binding Password }" />
-                    <Button Content="Login"  IsEnabled ="{Binding NotLoggedIn }"  Grid.Column="0" Grid.Row="3" Click="loginButton_Click"/>
-                    <Button Content="Import current data" IsEnabled ="{Binding LoggedIn }"  Grid.Column="1" Grid.Row="3" Click="loadDataButton_Click"/>
-
+                    <PasswordBox Grid.Row="2" Grid.Column="1" Width="300" Password="{Binding Password ,Mode=TwoWay}"/>
+                    <CheckBox  Grid.Row="3" Grid.Column="0" IsChecked="{Binding IsSaveCredentials, Mode=TwoWay}" Margin="12,12,12,10" FontSize="30" FontFamily="{StaticResource PhoneFontFamilyLight}"/>
+                    <TextBlock Grid.Row="3" Grid.Column="1" Width="300" Text="Save credentials (enycrypted)" VerticalAlignment="Center" Margin="12,12,12,10"/>
+                    <Button Content="Login"  IsEnabled ="{Binding NotLoggedIn }"  Grid.Column="0" Grid.Row="4" Click="loginButton_Click"/>
+                    <Button Content="Import project data" IsEnabled ="{Binding LoggedIn }"  Grid.Column="1" Grid.Row="4" Click="loadDataButton_Click"/>
                 </Grid>
             </phone:PivotItem>
         </phone:Pivot>
