--- a/TimecardApp/View/TimelogPage.xaml
+++ b/TimecardApp/View/TimelogPage.xaml
@@ -15,7 +15,7 @@
 
     <!--LayoutRoot ist das Stammraster, in dem alle anderen Seiteninhalte platziert werden-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
-        <phone:Pivot x:Name="SettingPivot" HorizontalAlignment="Left" Height="Auto" Title="TimecardApp - timelog" VerticalAlignment="Top" Width="500">
+        <phone:Pivot x:Name="SettingPivot" SelectionChanged="TlSettingPagePivot_SelectionChanged" HorizontalAlignment="Left" Height="Auto" Title="TimecardApp - timelog" VerticalAlignment="Top" Width="500">
             <phone:PivotItem x:Name="TimelogSetting" CacheMode="{x:Null}" Header="Tl setting">
                 <Grid x:Name="SettingPanel" >
                     <Grid.ColumnDefinitions>
