--- a/TimecardApp/View/TimelogPage.xaml
+++ b/TimecardApp/View/TimelogPage.xaml
@@ -16,16 +16,49 @@
 
     <!--LayoutRoot ist das Stammraster, in dem alle anderen Seiteninhalte platziert werden-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
-        <phone:Pivot x:Name="TimelogPivot" HorizontalAlignment="Left" Height="Auto" Title="TimecardApp - timelog" VerticalAlignment="Top" Width="500">
-            <phone:PivotItem x:Name="tlProjects" CacheMode="{x:Null}" Header="Tl-projects">
-                
-                <!-- Expanderlist for tasks (just show name and projectName, projectID)-->
-                
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <phone:Pivot Grid.Row="0" x:Name="TimelogPivot" HorizontalAlignment="Left" Height="Auto" Title="TimecardApp - timelog" VerticalAlignment="Top" Width="500">
+            <phone:PivotItem x:Name="tlTasks" CacheMode="{x:Null}" Header="Tl - Tasks">
+                <Grid x:Name="taskContentPanel" Margin="12,0,12,0">
+                    <ListBox x:Name="taskListBox" ItemsSource="{Binding TlTaskCollection}" Margin="12, 0, 12, 0" >
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <Grid HorizontalAlignment="Stretch" Width="440">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*" />
+                                    </Grid.ColumnDefinitions>
+                                    <TextBlock 
+                                        Grid.Column="0"
+                                        Text="{Binding TimelogTaskIdent}"
+                                        FontSize="25"
+                                        Margin="0,0,0,0">
+                                    </TextBlock>
+                                </Grid>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
+                </Grid>
             </phone:PivotItem>
         </phone:Pivot>
-        <Grid x:Name="LoadingPanel" IsHitTestVisible="True" Visibility="Visible">
-            <Border Background="Black" Opacity="0.8" />
-            <TextBlock Text="Loading ... "/>
+        <Grid  Grid.Row="2"   x:Name="InformationGrid" Background="Transparent" >
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="120"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock HorizontalAlignment="Left" Text="user:" Grid.Row="0" Grid.Column="0" FontSize="25" Height="33" />
+            <TextBlock HorizontalAlignment="Left" Text="{Binding Username}" VerticalAlignment="Center" Grid.Row="0" Grid.Column="1" FontSize="25" Height="33" />
+            <TextBlock HorizontalAlignment="Left" Text="state:"  Grid.Row="1" Grid.Column="0" FontSize="25" Height="33" />
+            <TextBlock HorizontalAlignment="Left" Text="{Binding CurrentState}" VerticalAlignment="Center" Grid.Row="1" Grid.Column="1" FontSize="25" Height="33" />
+            <TextBlock HorizontalAlignment="Left" Text="opeartion:"  Grid.Row="2" Grid.Column="0" FontSize="25" Height="33" />
+            <TextBlock HorizontalAlignment="Left" Text="{Binding CurrentOperation}" VerticalAlignment="Center" Grid.Row="2" Grid.Column="1" FontSize="25" Height="33" />
         </Grid>
     </Grid>
 
