--- a/TimecardApp/View/WorktaskPage.xaml
+++ b/TimecardApp/View/WorktaskPage.xaml
@@ -29,7 +29,7 @@
         </StackPanel>
 
         <!--ContentPanel - zusätzliche Inhalte hier platzieren-->
-        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="10,0,0,0" >
+        <ScrollViewer HorizontalAlignment="Left"  Margin="0,0,0,0" Grid.Row="1" VerticalAlignment="Top" Height="Auto" >
             <Grid x:Name="WorkingGrid" Margin="0,0,12,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="110"/>
@@ -46,8 +46,14 @@
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
-                
+
                 <toolkit:TimePicker x:Name="startTimePicker"  Grid.Column="1" Grid.Row="0" Value="{Binding WorktaskPageStartTime,  Mode=TwoWay}" IsEnabled="{Binding WorktaskPageEnabled}" />
                 <TextBlock HorizontalAlignment="Left" Margin="23,18,0,21" Text="start" VerticalAlignment="Center" Grid.Row="0" Grid.Column="0" FontSize="25" Height="33" Width="76"/>
                 <toolkit:TimePicker x:Name="endTimePicker" Grid.Column="3" Grid.Row="0" Value="{Binding WorktaskPageEndTime,  Mode=TwoWay}" IsEnabled="{Binding WorktaskPageEnabled}"/>
@@ -72,56 +78,37 @@
                     </toolkit:ListPicker.FullModeItemTemplate>
                 </toolkit:ListPicker>
                 <Button
-                                Grid.Column="3"
-                                Grid.Row="5"
-                                x:Name="newProjectButton"
-                                BorderThickness="2"    
-                                IsEnabled="{Binding WorktaskPageEnabled}"
-                                Click="newProjectButton_Click">
+                    Grid.Column="3"
+                    Grid.Row="5"
+                    x:Name="newProjectButton"
+                    BorderThickness="2"    
+                    IsEnabled="{Binding WorktaskPageEnabled}"
+                    Click="newProjectButton_Click">
                     <Image Source="/Icons/add.png" Height="40" Width="40" Margin="0,0,0,0" />
                 </Button>
                 <toolkit:DatePicker  x:Name="dayDatePicker" Grid.Column="1" Grid.Row="6" Grid.ColumnSpan="3" Value="{Binding WorktaskPageDayDate,  Mode=TwoWay}" IsEnabled="{Binding WorktaskPageEnabled}" />
                 <TextBlock HorizontalAlignment="Left" Margin="23,18,0,21" Text="date" VerticalAlignment="Center" Grid.Row="6" Grid.Column="0" FontSize="25" Height="33" Width="76"/>
-
-                <ScrollViewer Grid.Column="0" HorizontalAlignment="Left"  Margin="0,5,-36,0" Grid.Row="7" VerticalAlignment="Top" Grid.ColumnSpan="4" Height="Auto" >
+                <ScrollViewer Grid.Column="0" HorizontalAlignment="Left"  Margin="0,5,-36,0" Grid.Row="7" VerticalAlignment="Top" Grid.ColumnSpan="4" Height="Auto" MaxHeight="100" >
                     <TextBox x:Name="workDescriptionTextBox" VerticalAlignment="Top" Text="{Binding WorktaskPageWorkDescription, Mode=TwoWay}" Width="456" TextWrapping="Wrap" GotFocus="workDescriptionTextBox_GotFocus" IsEnabled="{Binding WorktaskPageEnabled}"/>
                 </ScrollViewer>
+                <TextBlock HorizontalAlignment="Left" Margin="23,18,0,21" Text="for Timelog" VerticalAlignment="Center" Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="2" FontSize="25" Height="33" Visibility="{Binding TimelogActive}"/>
+                <CheckBox x:Name="forTimelogCheckbox" Grid.Column="3" Grid.Row="9" Margin="020,0,0,0" IsChecked="{Binding ForTimelog, Mode=TwoWay}" Visibility="{Binding TimelogActive}"/>
+                <TextBlock HorizontalAlignment="Left" Margin="23,0,0,2" Text="select timelog task:" VerticalAlignment="Center" Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="2" FontSize="20"  Visibility="{Binding TimelogActive}"/>
+                <TextBlock HorizontalAlignment="Left" Margin="23,0,0,2" Text="{Binding SelectedTimelogTaskIdent}" VerticalAlignment="Center" Grid.Row="11" Grid.Column="0" Grid.ColumnSpan="4" FontSize="30" Visibility="{Binding TimelogActive}"/>
+                <toolkit:ListPicker x:Name="TimelogTasks" Margin="23,0,12,0" Grid.Row="12" Grid.Column="0" Grid.ColumnSpan="4" ItemsSource="{Binding TimelogTaskCollection}" IsEnabled="{Binding ForTimelog}" Visibility="{Binding TimelogActive}" SelectedItem="{Binding TimelogTask, Mode=TwoWay}" >
+                    <toolkit:ListPicker.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding TimelogTaskIdent}" />
+                        </DataTemplate>
+                    </toolkit:ListPicker.ItemTemplate>
+                    <toolkit:ListPicker.FullModeItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding TimelogTaskIdent}" FontSize="20"/>
+                        </DataTemplate>
+                    </toolkit:ListPicker.FullModeItemTemplate>
+                </toolkit:ListPicker>
+                
             </Grid>
-
-            <!--<phone:PivotItem CacheMode="{x:Null}" Header="settings" Margin="0,0,14,28">
-                    <Grid x:Name="SettingGrid" Margin="0,0,12,0">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="250"/>
-                            <ColumnDefinition Width="70"/>
-                        </Grid.ColumnDefinitions>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto"/>
-                            <RowDefinition Height="Auto"/>
-                            <RowDefinition Height="Auto"/>
-                            <RowDefinition Height="Auto"/>
-                            <RowDefinition Height="Auto"/>
-                            <RowDefinition Height="Auto"/>
-                            <RowDefinition Height="Auto"/>
-                        </Grid.RowDefinitions>
-                        <TextBlock HorizontalAlignment="Left" Margin="5,18,0,21" Text="Project:" VerticalAlignment="Center" Grid.Row="0" Grid.Column="0" FontSize="25" Height="33" Width="90"/>
-                        <toolkit:ListPicker x:Name="ProjectPicker" Grid.Row="0" Grid.Column="1" ItemsSource="{Binding WorktaskPageProjectCollection}" IsEnabled="{Binding WorktaskPageEnabled}" SelectedItem="{Binding WorktaskPageProject, Mode=TwoWay}">
-                            <toolkit:ListPicker.ItemTemplate>
-                                <DataTemplate>
-                                    <TextBlock Text="{Binding Ident_Project}" />
-                                </DataTemplate>
-                            </toolkit:ListPicker.ItemTemplate>
-                        </toolkit:ListPicker>
-                        <Button
-                                Grid.Column="2"
-                                x:Name="newProjectButton"
-                                BorderThickness="0"    
-                                IsEnabled="{Binding WorktaskPageEnabled}"
-                                Click="newProjectButton_Click">
-                            <Image Source="/Icons/add.png" Height="55" Width="55" Margin="-20,0,0,0"/>
-                        </Button>
-                    </Grid>
-                </phone:PivotItem>-->
-        </Grid>
+        </ScrollViewer>
     </Grid>
 </phone:PhoneApplicationPage>
